--- a/cloudformation/vpcStack.yml
+++ b/cloudformation/vpcStack.yml
@@ -1,4 +1,4 @@
-Description:  Full VPC Stack with 3 tiers and 2 subnets in each tier.
+Description:  Full VPC Stack with 3 tiers and 2 subnets in each tier. 
 
 Parameters:
   EnvironmentName:
@@ -29,7 +29,7 @@ Parameters:
     Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
     Type: String
     Default: 10.0.15.0/24
-
+  
   PrivateDBSubnet1CIDR:
     Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
     Type: String
@@ -39,9 +39,7 @@ Parameters:
     Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
     Type: String
     Default: 10.0.25.0/24
-
 Resources:
-
   VPC:
     Type: AWS::EC2::VPC
     Properties:
@@ -64,12 +62,12 @@ Resources:
     Properties:
       InternetGatewayId: !Ref InternetGateway
       VpcId: !Ref VPC
-
+  
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [ 0, !GetAZs '' ] #us-east-1a from GetAZs function
+      AvailabilityZone: !Select [ 0, !GetAZs '' ] #us-east-1a from GetAZs function 
       CidrBlock: !Ref PublicSubnet1CIDR #get cidr block from parameters
       MapPublicIpOnLaunch: true #enable public ip by default
       Tags:
@@ -80,18 +78,18 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [ 1, !GetAZs  '' ] #us-east-1b from GetAZs function
+      AvailabilityZone: !Select [ 1, !GetAZs  '' ] # us-east-1b
       CidrBlock: !Ref PublicSubnet2CIDR
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-PublicSubnet2
-
+  
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [ 0, !GetAZs  '' ] #us-east-1a
+      AvailabilityZone: !Select [ 0, !GetAZs  '' ] # us-east-1a
       CidrBlock: !Ref PrivateSubnet1CIDR
       MapPublicIpOnLaunch: false
       Tags:
@@ -108,12 +106,12 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-PrivateSubnet2
-
+  
   PrivateDBSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [ 0, !GetAZs  '' ] #us-east-1a
+      AvailabilityZone: !Select [ 0, !GetAZs  '' ] # us-east-1a
       CidrBlock: !Ref PrivateDBSubnet1CIDR
       MapPublicIpOnLaunch: false
       Tags:
@@ -130,7 +128,7 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-PrivateDBSubnet2
-
+  
   NatGateway1EIP:
     Type: AWS::EC2::EIP
     DependsOn: InternetGatewayAttachment
@@ -154,7 +152,7 @@ Resources:
     Properties:
       AllocationId: !GetAtt NatGateway2EIP.AllocationId
       SubnetId: !Ref PublicSubnet2
-
+  
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -170,7 +168,7 @@ Resources:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
-
+  
   PublicSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -182,7 +180,7 @@ Resources:
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet2
-
+  
   PrivateRouteTable1:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -190,7 +188,7 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-PrivateRouteTable1
-
+  
   PrivateRouteTable2:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -198,56 +196,57 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-PrivateRouteTable2
-
+  
   DefaultPrivateRoute1:
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PrivateRouteTable1
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NatGateway1
-
+  
   DefaultPrivateRoute2:
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PrivateRouteTable2
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NatGateway2
-
+  
   PrivateSubnet1RouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PrivateRouteTable1
       SubnetId: !Ref PrivateSubnet1
-
+  
   PrivateSubnet1RouteTableAssociation2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PrivateRouteTable1
       SubnetId: !Ref PrivateDBSubnet1
-
+  
   PrivateSubnet2RouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PrivateRouteTable2
       SubnetId: !Ref PrivateSubnet2
-
+  
   PrivateSubnet2RouteTableAssociation2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PrivateRouteTable2
       SubnetId: !Ref PrivateDBSubnet2
 
-Outputs:
+Outputs: 
   vpcID:
-    Description: A reference to the created VPC
+    Description: sprintqa vpc id
     Value: !Ref VPC
-    Export: sprintqaVPC
+    Export: 
+      Name: sprintqaVPC   
 
   PublicSubnet1:
     Description: Public Subnet 1 ID
     Value: !Ref PublicSubnet1
     Export:
-      Name: PublicSubnet1
+      Name: PublicSubnet1 
   
   PrivateSubnet1:
     Description: Private Subnet 1 ID
