--- a/cloudformation/ASGfullCFNStack.yml
+++ b/cloudformation/ASGfullCFNStack.yml
@@ -2,10 +2,9 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Description: >-
   Modified ASG template from AWS provided template.
-
 Parameters:
   VpcID:
-    Type: 'AWS::EC2::VPC::Id'
+    Type: 'AWS::EC2::VPC::Id' # selecting this type of parameter will display all available vpc in the region 
     Description: VpcId of your existing Virtual Private Cloud (VPC)
   Subnets:
     Type: 'List<AWS::EC2::Subnet::Id>'
@@ -68,7 +67,7 @@ Resources:
     Properties:
       Subscription:
         - Endpoint: !Ref OperatorEMail
-          Protocol: email
+          Protocol: email 
   
   WebServerGroup:
     Type: 'AWS::AutoScaling::AutoScalingGroup'
